ajout du modele recipe

--- a/KimApp/Views/GifPage.xaml
+++ b/KimApp/Views/GifPage.xaml
@@ -5,7 +5,7 @@
 
     <VerticalStackLayout Padding="20" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
         <Image Source="beth_harmon_gif.gif"
-               x:Name="gifAn"
+               x:Name="GifAn"
                IsAnimationPlaying="True"
                HorizontalOptions="Center"
                VerticalOptions="Center"
