Correction du bouton go back

--- a/KimApp/AppShell.xaml
+++ b/KimApp/AppShell.xaml
@@ -26,6 +26,7 @@
         </Tab>
     </TabBar>
     
+    <ShellContent Route="secondPage" ContentTemplate="{DataTemplate kimApp:SecondPage}" />
     <ShellContent
         Route="recipeDetail"
         ContentTemplate="{DataTemplate local:RecipeDetailPage}" />
